refactoring and documentation

--- a/sample/public/index.html
+++ b/sample/public/index.html
@@ -18,6 +18,7 @@
     }
 </style>
 <div id="container">
+    <canvas width="640" height="480"></canvas>
     <figure>
         <video id="preview-send" muted controls></video>
         <figcaption>Send preview</figcaption>
