fix bugs and add stats

--- a/sample/public/index.html
+++ b/sample/public/index.html
@@ -74,6 +74,7 @@
                 <button id="unregisterVulcast">Unegister Vulcast</button>
                 <button id="connectVulcast">Connect Vulcast</button>
                 <button id="disconnectVulcast">Disconnect Vulcast</button>
+                <button id="dumpVulcastStats">Dump Vulcast Stats</button>
             </td>
         </tr>
         <tr>
@@ -83,6 +84,7 @@
                 <button id="unregisterClient">Unregister Client</button>
                 <button id="connectClient">Connect Client</button>
                 <button id="disconnectClient">Disconnect Client</button>
+                <button id="dumpClientStats">Dump Client Stats</button>
             </td>
         </tr>
         <tr>
