--- a/sample/public/index.html
+++ b/sample/public/index.html
@@ -97,7 +97,6 @@
     </table>
 
     <div style="display:flex">
-        <!-- <canvas width="640" height="480"></canvas> -->
         <figure>
             <video id="preview-send" muted controls></video>
             <figcaption>Send preview</figcaption>
@@ -107,6 +106,10 @@
             <figcaption>Receive preview</figcaption>
         </figure>
     </div>
+    <figure>
+        <canvas width="640" height="480"></canvas>
+        <figcaption>Send source</figcaption>
+    </figure>
     <script src="bundle.js">
     </script>
 </body>
