--- a/sample/public/index.html
+++ b/sample/public/index.html
@@ -16,7 +16,7 @@
                 <label for="signalAddr">Signal Address:</label>
             </td>
             <td>
-                <input type="text" id="signalAddr" name="signalAddr" value="wss://192.168.140.128:8443" /><br />
+                <input type="text" id="signalAddr" name="signalAddr" value="wss://vulcangames.fun:8443" /><br />
             </td>
         </tr>
         <tr>
@@ -24,7 +24,7 @@
                 <label for="controlAddr">Control Address:</label>
             </td>
             <td>
-                <input type="text" id="controlAddr" name="controlAddr" value="https://192.168.140.128:9443" /><br />
+                <input type="text" id="controlAddr" name="controlAddr" value="https://vulcangames.fun:9443" /><br />
             </td>
         </tr>
         <tr>
